--- a/DSA_basics_.ipynb
+++ b/DSA_basics_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8ifiZZuoqftOdjdQM+bh7",
+      "authorship_tag": "ABX9TyOZQF7D37munWudwsGU48eO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -243,6 +243,15 @@
       ],
       "metadata": {
         "id": "7C-ddIWRp30D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "colab link : https://colab.research.google.com/drive/1e8wvUGTWgr8shlbkpWgS6SK5KAWhi8c-?usp=sharing"
+      ],
+      "metadata": {
+        "id": "E9MhtHZjxt1J"
       }
     },
     {
