--- a/DSA_basics_.ipynb
+++ b/DSA_basics_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZQF7D37munWudwsGU48eO",
+      "authorship_tag": "ABX9TyNUHqxarVbeknyn4OzgLxL3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,7 +203,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![](https://drive.google.com/uc?export=view&id=1QTmtQq0uTs-3BwXJEA2roWrCjuLUFJ93)\n"
+        "![\"Alt text for your image\"](https://drive.google.com/uc?export=view&id=1QTmtQq0uTs-3BwXJEA2roWrCjuLUFJ93)\n"
       ],
       "metadata": {
         "id": "AKVUvzvyly9o"
@@ -239,7 +239,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![](https://drive.google.com/uc?export=view&id=1uU0iUaLWh6FKGj1ERlLjHr9T5sLtGeYY)"
+        "![\"Alt text for your image\"](https://drive.google.com/uc?export=view&id=1uU0iUaLWh6FKGj1ERlLjHr9T5sLtGeYY)"
       ],
       "metadata": {
         "id": "7C-ddIWRp30D"
